Made tables center align and flex correctly up until around 400px, then it starts to break (iphone x is 375px so shouldnt be too much of an issue) Also removed the padding and margin styling for the second header so that they dont get pushed off the page. Need to add media queries for larger displays so the design translates up to desktop well.

--- a/src/styles/Employees.scss
+++ b/src/styles/Employees.scss
@@ -9,11 +9,12 @@
 .ant-table-wrapper {
   width: 95%;
   height: 100%;
-  margin-left: 2.5%;
+  margin:0 auto;
   padding: 1px;
   background: #f0f0f0;
   border: 1px solid #f0f0f0;
   border-radius: 2px;
+
 
   .ant-tag {
     margin-bottom: 7px;
