--- a/src/styles/Programs.scss
+++ b/src/styles/Programs.scss
@@ -2,9 +2,8 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
-  @media (min-width: 992px) {
-    margin-left: 20px;
-  }
+  width:100%;
+ 
 }
 
 .add-program-btn-ctn {
